test/parser/types/self_generic.yl
// RUN: compiler %s 2>&1 -ast-dump | filecheck %s

// CHECK: [[# @LINE + 1 ]]:15: error: expected ')'
fn foo(x: Self<number>) {}
